--- a/package.json
+++ b/package.json
@@ -8,19 +8,32 @@
     "preview": "svelte-kit preview",
     "prepare": "svelte-kit sync",
     "test": "playwright test",
+    "test:unit": "jest",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.16.11",
     "@playwright/test": "^1.20.0",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
+    "@types/jest": "^27.4.1",
+    "babel-jest": "^27.5.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.1",
+    "jest": "^27.5.1",
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.5.0",
     "svelte": "^3.44.0"
   },
-  "type": "module"
+  "type": "module",
+  "jest": {
+    "transform": {
+      "^.+\\.js": "babel-jest"
+    },
+    "moduleFileExtensions": [
+      "js"
+    ]
+  }
 }
